kust/kust/cluster/test/eu-data-tools/elastic/resources/elasticsearch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  ingressClassName: nginx
  rules:
    - host: eu-data-es.fcaus-te.autodata.tech
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: eu-data-es-http
                port:
                  number: 9200
  tls:
    - secretName: eu-data-es-cert
      hosts:
        - eu-data-es.fcaus-te.autodata.tech
