kust/kust/cluster/test/eu-data-tools/elastic/resources/kibana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  labels:
    app: kibana
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  ingressClassName: nginx
  rules:
    - host: eu-data.fcaus-te.autodata.tech
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: eu-data-kb-http
                port:
                  number: 5601
  tls:
    - secretName: fcaus-wildcard
      hosts:
        - eu-data.fcaus-te.autodata.tech
